--- a/kubernetes/charts/homelab-gateway/templates/gateway.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/gateway.yaml
@@ -23,9 +23,8 @@ spec:
     tls:
       mode: Terminate
       certificateRefs:
-      - kind: Secret
-        group: ""
-        name: homelab-tls
+        - kind: Secret
+          name: cloudflare-tls
     allowedRoutes:
       namespaces:
         from: All
