--- a/platform/ai/k8s/ai-platform-storage.yaml
+++ b/platform/ai/k8s/ai-platform-storage.yaml
@@ -11,6 +11,7 @@ spec:
     storage: 500Gi
   accessModes:
     - ReadWriteMany
+    - ReadWriteOnce
   storageClassName: nfs-csi
   mountOptions:
     - nolock
