--- a/platform/ai/k8s/integrations/openwebui/kustomization.yaml
+++ b/platform/ai/k8s/integrations/openwebui/kustomization.yaml
@@ -10,3 +10,6 @@ helmCharts:
     namespace: ai
     releaseName: open-webui
     valuesFile: values.yaml
+
+generators:
+  - secrets-generator.yaml
