--- a/platform/automation/k8s/n8n/secrets.enc.yaml
+++ b/platform/automation/k8s/n8n/secrets.enc.yaml
@@ -1,26 +1,27 @@
-apiVersion: ENC[AES256_GCM,data:g70=,iv:5dc/4MkUZi0ZjDRzd55CXDJ/GQKhPyGMCQPkLVFB9/Q=,tag:/mUy03petZfgjacmwVZD+Q==,type:str]
-kind: ENC[AES256_GCM,data:mt6AiHfi,iv:BSGHPPK+2z3prKNEQQ/xjG1dSCWxpyqrHSnQ18OtnnA=,tag:XxYcKxrRfHLR4PN6FbcRRQ==,type:str]
+apiVersion: ENC[AES256_GCM,data:Ysc=,iv:nX+umHcqUpETYNP/CPM+xTzVH/I/AsyBxNQE+KroJO4=,tag:NGcWWBKSmZcoW0jwXiY31Q==,type:str]
+kind: ENC[AES256_GCM,data:hK0Jv9yt,iv:AX9h2FtwPDBgKBcJbedR3/R/JC0Usx56UTrcAfD7TJE=,tag:lYDPkHDX6Af6oX/tKDBHFA==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:bKhuG00W5yOJIy8=,iv:P4XUn6hCjVnjOzIE+SXeroMz/koKP9QgFA5VxvOmQdU=,tag:XC3vngQw3tG59h4pal8ZaA==,type:str]
-    namespace: ENC[AES256_GCM,data:zQ2p8UVSsLLWHg==,iv:Rf9LaSeOPyAYVW6RCuJ+8sq6ScRqj0sNYZcKfHmCHqA=,tag:MulCK84HFFiw7kbm3EOEhA==,type:str]
-type: ENC[AES256_GCM,data:YmQcVmzj,iv:GW6Qfip+kzej2jIHnxmrHvELI2hS8HGsmytkFFzQLnI=,tag:O62qKEX3KVdZEw86iz4zPA==,type:str]
+    name: ENC[AES256_GCM,data:H4GJPzzQSu6c1Ko=,iv:6iyC3E4s2EBgT7Zihz0f8YWHg+e8qETL2szynXciqL0=,tag:JLXA/pGzz1vrouir9ZnTvQ==,type:str]
+    namespace: ENC[AES256_GCM,data:1tpqv1t6wjw5sg==,iv:CTGPri2RrAwhk7i2qzEqXCsbZfiE7mBblR9R/CepX8U=,tag:q+9Sohv5/oZyMlP4MbBJ9A==,type:str]
+type: ENC[AES256_GCM,data:z8+fhjwi,iv:RlxS0mQK8GN8nUFd5fbWyZWh4Nwg6sCUPQtON1kAHDM=,tag:PEAPN49eo9oSpCjzwMDjzQ==,type:str]
 data:
-    #ENC[AES256_GCM,data:Stll7swCuDKyuFbStDVRwrVpbhVDiseZE6Q=,iv:Ahs6EIST5+kjbe7e/Lgs9vayRMterBR6h2T8JIj6x4Y=,tag:+T4hUZD+Okg8lW08STCtGQ==,type:comment]
-    N8N_ENCRYPTION_KEY: ENC[AES256_GCM,data:IGm2UaQIkyMpTsQlTSQoIh1iRq2wb/fy,iv:5hN4UMS0E3weRaECRsmeOoOCIPp3v5AoqeARCeaAYCA=,tag:Dwc/e3+x1Je+pnU/yOA1fA==,type:str]
-    N8N_USER_MANAGEMENT_JWT_SECRET: ENC[AES256_GCM,data:VsXkoNP3SSNVHVUcUq0a4TXXOLFP00Pj,iv:461ihqjzd3R4Vx/sZP4MYBhEdt/xhUoFqdqlKVLi8jI=,tag:Hxd+k2xqXG209HFnbnHpVQ==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:bxrulbF8GZRuBpyHqvaskkJAQWNPKUzV,iv:JD5J4pEnP54U5Hk82xMGe5zffa+8WlX7y7oPz82bOWk=,tag:cYp2Vhq+OBCKqHApb0u2Hg==,type:str]
+    #ENC[AES256_GCM,data:7W0lHua36FlNlkiDKSq5wjmdCu7/JiYfeCc=,iv:SjcREAnF0+FyzIoY/N02EO+6Rp2OPYzD8ouV9tqHSoo=,tag:zNyh1CTwyhnewzmkmgtMVA==,type:comment]
+    N8N_ENCRYPTION_KEY: ENC[AES256_GCM,data:NtzytcQVTLEOT1UsDSREjA/3l6Oh2MWi,iv:2ZdD3ncgA7hZQrGZfWbUOFBKoSw8MdJoROxS2ji5AKQ=,tag:7ydFNwuFNwUc/jcg65U8Gw==,type:str]
+    N8N_USER_MANAGEMENT_JWT_SECRET: ENC[AES256_GCM,data:Lpl4MV4S8jmPFrpOlBHe+0Or4QgnRjkM,iv:a8JTOoXvHX5zJWrRhfoG7GbyGrbfj4ksfkxmtiEyNPs=,tag:AKyrYC5iuDMPffRpH3z7bw==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:hUrnQGNJ1k0ffc8I2rfe9HhNRrDzR7+Z,iv:x1ggTmmOGmBLu09q2ur4aA9xzY/3MB+oajVvNaGc6qs=,tag:WM5Bp/7kjhzA172Wu2kqTQ==,type:str]
+    CLOUDFARE_API_TOKEN: ENC[AES256_GCM,data:OX5HjVtzR0QTExqGcm75RiWXsklAnfqPdKOck3sUKpeEaEbySWxGbWeMozkGzIkBrI3SvDVOuPM=,iv:3xFZqvNoANwm17Ln198dlilBxl1mI5c9wK72yvV0XIQ=,tag:PGa1OLx94+0itB3vH+hxsg==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-06-16T20:02:17Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAFwhuDtfLzcsk2snri/fSavAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMQwm/omvmtqWJDQFuAgEQgDvZFj+beW9ciAWFxkwqNLuYm2VqmMe2RLCkVb7FN6D1zJramPPjsEWu/mGRa5QNOyWAg4Gw0bIi8gvbLA==
+          created_at: "2025-06-24T20:16:23Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAG5AhMTAHuEfBE4xHfAzcdzAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMqTs/X/D3mVSHznSDAgEQgDssxQRfkMjsDnDVCjWt+NuGHZwa64gGmFXGhgRtRV80z3rbJdVWXi2PwtjR+6wfSSgB13cQy1/+nxxkEg==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-06-16T20:02:17Z"
-    mac: ENC[AES256_GCM,data:Urb/pU7Z6o/CCGRB8z28oK+qa5lXzNiLnh8Mw5K9qfP2WYaIq4BTH1aAnj3dibJRVSFxT0YJiB+UnMFCRW4g4ILj4N3HTS3wv8DOsneHfFvF71bl3dxNigmXoPw0fbvP3rvBCdsy4G80AyfVtVzvbIU+MTlflJ1/f5LfDGMkJpg=,iv:eBQVRcWwveSi0g3TvUXeA5wmONYMT+Vgq0EXT4/LCuM=,tag:TFla33HqJq057JSU3r0nhQ==,type:str]
+    lastmodified: "2025-06-24T20:16:24Z"
+    mac: ENC[AES256_GCM,data:YFnob0ycnwvUBVtlpqpNa1OA6liuCuf9RBIB8EKJ+CyJtz+AlIegcseWZwH9M2ueOHBsZRtdznwGvd8xgTb5H/QgEdX5Bd2Yofbna0+61ILZiFOV7zamXb8Uu+5R8I1v+LYgL/yin4+ibpPrkxtmnEvirZVpdyLTwOPu4xau0ms=,iv:LIxC18nDRHfH4aB5RQth6CweYS/J+oYDSXEzY+PKt1w=,tag:Qb41ydZc/hZdNB1eSgSW6Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
