--- a/kubernetes/charts/homelab-gateway/Chart.yaml
+++ b/kubernetes/charts/homelab-gateway/Chart.yaml
@@ -5,14 +5,7 @@ description: Helm Chart for homelab gateway
 type: application
 version: '1.0.0'
 appVersion: 'v1.0.0'
-
 dependencies:
-  - name: gateway-helm
-    version: v0.0.0-latest
-    repository: oci://docker.io/envoyproxy
-  - name: ai-gateway-crds-helm
-    version: v0.0.0-latest
-    repository: oci://docker.io/envoyproxy
-  - name: ai-gateway-helm
-    version: v0.0.0-latest
-    repository: oci://docker.io/envoyproxy
+  - name: cloudflare-tunnel
+    repository: https://cloudflare.github.io/helm-charts
+    version: 0.3.2
