--- a/kubernetes/charts/homelab-gateway/values.yaml
+++ b/kubernetes/charts/homelab-gateway/values.yaml
@@ -1,12 +1,10 @@
----
-gateway-helm:
-  config:
-    # backendTlsConfig:
-    #   clientCertificateRef: homelab-tls
-    envoyGateway:
-      extensionApis:
-        enableBackend: true
 
-ai-gateway-helm:
-  controller:
-    enableInferenceExtension: true
+
+# cloudflare-tunnel:
+#   cloudflare:
+#     account: ce70bbe5880cef2c1874b61b39a55436
+#     tunnelName: homelab_external
+#     tunnelId: 862aefa7-f9b9-4c2d-be08-d3911716c583
+#     secret: zfdAi54uEpnEp+BAxjRfYkN9HiD+bBa5Jjq0I+NYqc0=
+#   image:
+#     pullPolicy: Always
