--- a/platform/ai/k8s/integrations/openwebui/tlsroute.yaml
+++ b/platform/ai/k8s/integrations/openwebui/tlsroute.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   parentRefs:
     - name: homelab-gateway
+      namespace: kube-system
   hostnames:
     - openwebui.homelab.internal
   rules:
