--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,7 @@ generated
 **/k8s/charts
 kubernetes/apps/**/charts
 kubernetes/charts/homelab-gateway/charts
-platform/ai/k8s/integrations/openwebui/charts
-platform/ai/k8s/llm-providers/ollama/charts
-platform/*/*/charts/*
-
+platform/**/charts/
 
 .DS_Store
 .pytest_cache
