--- a/platform/ai/k8s/kustomization.yaml
+++ b/platform/ai/k8s/kustomization.yaml
@@ -4,6 +4,8 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - ai-platform-storage.yaml
+  - gateway.yaml
+  - airoutes.yaml
   - storage
   - llm-providers
   - integrations
