--- a/kubernetes/charts/homelab-gateway/Chart.yaml
+++ b/kubernetes/charts/homelab-gateway/Chart.yaml
@@ -9,3 +9,12 @@ dependencies:
   - name: cloudflare-tunnel
     repository: https://cloudflare.github.io/helm-charts
     version: 0.3.2
+  - name: gateway-helm
+    version: v1.4.1
+    repository: oci://docker.io/envoyproxy
+  - name: ai-gateway-crds-helm
+    version: v0.2.1
+    repository: oci://docker.io/envoyproxy
+  - name: ai-gateway-helm
+    version: v0.2.1
+    repository: oci://docker.io/envoyproxy
