--- a/kubernetes/charts/homelab-gateway/templates/internal-gateway.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/internal-gateway.yaml
@@ -2,7 +2,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: homelab-gateway
+  name: homelab-internal-gateway
   namespace: kube-system
   annotations:
     external-dns.alpha.kubernetes.io/hostname: homelab.internal
