--- a/kubernetes/charts/homelab-gateway/values.yaml
+++ b/kubernetes/charts/homelab-gateway/values.yaml
@@ -8,3 +8,7 @@
 #     secret: zfdAi54uEpnEp+BAxjRfYkN9HiD+bBa5Jjq0I+NYqc0=
 #   image:
 #     pullPolicy: Always
+envoyGateway:
+  gateway:
+    controllerName: gateway.envoyproxy.io/gatewayclass-controller
+    gatewayClassName: aigw-envoy
