--- a/platform/ai/k8s/llm-providers/openai/kustomization.yaml
+++ b/platform/ai/k8s/llm-providers/openai/kustomization.yaml
@@ -6,3 +6,6 @@ resources:
   - backend-service.yaml
   - backend-tls-policy.yaml
   - backend-security-policy.yaml
+
+generators:
+  - secrets-generator.yaml
