--- a/platform/observability/graylog/compose.yaml
+++ b/platform/observability/graylog/compose.yaml
@@ -14,8 +14,8 @@ services:
       GRAYLOG_ROOT_PASSWORD_SHA2: ${GRAYLOG_ROOT_PASSWORD_SHA}
       GRAYLOG_HTTP_EXTERNAL_URI: "https://graylog.homelab.internal"
       GRAYLOG_MONGODB_URI: "mongodb://mongodb:27017/graylog"
-      TZ: "America/NewYork"
-      GRAYLOG_ROOT_TIMEZONE: "America/NewYork"
+      TZ: "America/New_York"
+      GRAYLOG_ROOT_TIMEZONE: "America/New_York"
     ports:
       - 1514:1514/tcp # Syslog TCP
       - 1514:1514/udp # Syslog UDP
